feat: remove and update

--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -1,5 +1,5 @@
-wyh:
-  name: wyh
-  # title: 
+wuyuehui:
+  name: wuyuehui
+  title: '前端小菜鸡'
   url: https://github.com/wuyuehui
   image_url: /img/avatar.jpg
