--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,17 +8,20 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      # checkout && nodejs
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Setup Node
+        uses: actions/setup-node@v3
         with:
           node-version: 14.x
 
-      # install && build
-      - name: Install and Build
-        run: npm ci && npm run build
+      - name: Install
+        run: npm ci
 
-      # delopy
+      - name: Build
+        run: npm run build
+
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
